# roboparty_bms

./: .gitignore  CMakeLists.txt
.github/workflows/: build-deb.yml
cmake/: roboparty_bmsConfig.cmake.in
debian/: changelog  control  copyright  prerm  rules
firmware/: BMS_260130V1.6.dbc
include/: bms_driver.hpp
src/: bms_daemon.cpp  bms_driver.cpp  pybind_module.cpp
src/drivers/: CMakeLists.txt
src/drivers/gf/: CMakeLists.txt  protocol.cpp
src/drivers/gf485/: CMakeLists.txt  gf_bms_driver.cpp  gf_bms_driver.hpp  protocol.cpp
src/drivers/gfcan/: CMakeLists.txt  gfcan_bms_driver.cpp  gfcan_bms_driver.hpp
src/drivers/nrf/: CMakeLists.txt  nrf_pmic_driver.cpp  nrf_pmic_driver.hpp
src/drivers/tws/: CMakeLists.txt  protocol.cpp
src/protocol/: CMakeLists.txt
src/protocol/can/: socket_can.cpp  socket_can.hpp
src/protocol/serial/: serial_port.cpp  serial_port.hpp
